@@ -7,3 +7,4 @@
 [CHANGE] rowHeight and estimatedRowHeight are now set to UITableViewAutomaticDimension and IFAMinimumTapAreaDimension in IFATableViewController.
 [FIX] Fixed layout issues introduced with iOS 11 in IFAPickerViewController and IFADatePickerViewController.
 [FIX] Fixed issues with toolbar management introduced with iOS 11.
+[NEW] New method in UIViewController+IFACoreUI: ifa_topLevelParentViewController.
